_rendered/apps/pgadmin/apps-deployment-pgadmin.yaml
# Source: pgadmin/charts/pgadmin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: pgadmin-4.6.0
    
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/version: "9.15.0"
    app.kubernetes.io/managed-by: Helm
  name: pgadmin
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      annotations:
        
        prometheus.io/scrape: 'false'
      labels:
        
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/instance: pgadmin
    spec:
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsNonRoot: true
        runAsUser: 5050
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.15.0
          imagePullPolicy: IfNotPresent
          resources:
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
          #readiness & liveness
          livenessProbe:
            httpGet:
              path: /misc/ping
              port: 5050
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /misc/ping
              port: 5050
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - containerPort: 5050
              name: default
              protocol: TCP
          #config values that comes from the configmap 
          volumeMounts:
            
            
            - name: longhorn-pgadmin-config
              mountPath: /var/lib/pgadmin
              readOnly: false
      volumes:
        
        
        - name: longhorn-pgadmin-config
          persistentVolumeClaim:
            claimName: pgadmin-pgadmin-config-pvc
