_rendered/apps/pgadmin/cilium_io-ciliumnetworkpolicy-pgadmin-preset-cnp.yaml
# Source: pgadmin/charts/pgadmin/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: pgadmin-preset-cnp
spec:
  endpointSelector:
    matchLabels:
      
      app.kubernetes.io/name: pgadmin
      app.kubernetes.io/instance: pgadmin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - 
      toPorts:
      - ports:
        - port: "5432"
          protocol: TCP
      toServices:
      - k8sServiceSelector:
          selector:
            matchLabels:
              app.kubernetes.io/name: postgresdb
              io.kubernetes.pod.namespace: cloudnative-pg
